re PR target/39247 (FAIL: gcc.dg/tree-prof/bb-reorg.c compilation,  -fprofile-use -D_PROFILE_USE)

PR target/39247
	* arm.c (arm_override_options): Forcibly disable hot/cold block
	partitioning.

From-SVN: r153018